# mcp_poc

./: .gitignore  README.md  docker-compose.yml  nginx.conf
lucia/: README.md  __init__.py  config.py  docker-compose.yml  pipeline_factory.py  prompts.py  pyproject.toml  te.py
lucia/agents/: chitchat.py
lucia/clients/: llm_client.py  openai_client.py
lucia/embeddings/: embedding_client.py  openai_embedding_client.py
lucia/extractors/: extractor.py  models.py  noop_extractor.py  openai_extractors.py
lucia/pipelines/: knowledge_pipeline.py  search_pipeline.py
lucia/src/delos_lucia/: __init__.py  config.py  pipeline_factory.py  te.py
lucia/src/delos_lucia/embeddings/: openai_embedding_client.py
lucia/src/delos_lucia/extractors/: extractor.py  noop_extractor.py
lucia/src/delos_lucia/pipelines/: knowledge_pipeline.py
lucia/src/delos_lucia/stores/: info_store_neo4j.py
lucia/src/lucia/agents/: chitchat.py
lucia/src/lucia/clients/: __init__.py  llm_client.py  openai_client.py
lucia/src/lucia/extractors/: models.py  openai_extractors.py
lucia/src/lucia/pipelines/: search_pipeline.py
lucia/src/lucia/stores/: __init__.py  info_store_clickhouse.py
lucia/src/lucia/vectorstores/: __init__.py  vector_store.py
lucia/stores/: info_store.py  info_store_clickhouse.py  info_store_neo4j.py
lucia/vectorstores/: milvus_vector_store.py  vector_store.py
lucia_backend/: pyproject.toml
lucia_backend/chat_manager/: agent.py  consumers.py  docker-compose.yml  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
lucia_backend/chat_manager/migrations/: 0001_initial.py
lucia_backend/config/: asgi.py  middleware.py  settings.py  urls.py
lucia_backend/config/config/: settings.py
lucia_backend/user_manager/: serializers.py  urls.py  views.py
lucia_frontend/: .gitignore  package.json  svelte.config.js  vite.config.ts
lucia_frontend/.svelte-kit/: ambient.d.ts
lucia_frontend/.svelte-kit/adapter-node/: index.js  manifest.js
lucia_frontend/.svelte-kit/adapter-node/chunks/: exports.js
lucia_frontend/.svelte-kit/adapter-node/entries/fallbacks/: error.svelte.js
lucia_frontend/.svelte-kit/output/client/_app/immutable/entry/: start.B1MVqn5R.js
lucia_frontend/.svelte-kit/output/client/_app/immutable/nodes/: 1.0MaB1H-f.js  2.COCrW0I9.js
lucia_frontend/.svelte-kit/output/server/: manifest.js
lucia_frontend/.svelte-kit/output/server/.vite/: manifest.json
lucia_frontend/.svelte-kit/output/server/nodes/: 3.js
lucia_frontend/.svelte-kit/types/src/routes/: $types.d.ts
lucia_frontend/.svelte-kit/types/src/routes/signup/: $types.d.ts
lucia_frontend/src/: app.css
lucia_frontend/src/routes/: +page.svelte
lucia_frontend/src/routes/login/: +page.svelte
lucia_frontend/src/routes/signup/: +page.svelte
react_mcp/: Dockerfile  client.py  database.py  main.py  pyproject.toml  test.db
react_mcp/core/: config.py  depends.py  security.py
react_mcp/crud/: chat.py  user.py
react_mcp/models/: chat.py  user.py
react_mcp/routers/: __init__.py  ask.py  auth.py  general.py  prompts.py  users.py
react_mcp/schemas/: chat.py
react_mcp/services/: chat_service.py  llm_service.py  milvus_service.py  neo4j_service.py
react_mcp/utils/: logging.py
velt/: .gitignore  Dockerfile  package-lock.json  package.json  svelte.config.js
velt/.svelte-kit/adapter-node/: manifest-full.js  manifest.js
velt/.svelte-kit/adapter-node/_app/immutable/assets/: _layout.B_ZYE9sb.css
velt/.svelte-kit/adapter-node/chunks/: client.js  index.js  internal.js
velt/.svelte-kit/adapter-node/entries/pages/signup/: _page.svelte.js
velt/.svelte-kit/adapter-node/nodes/: 0.js  1.js  2.js  3.js  4.js
velt/.svelte-kit/output/client/.vite/: manifest.json
velt/.svelte-kit/output/client/_app/: version.json
velt/.svelte-kit/output/client/_app/immutable/assets/: 0.CgNu35-Q.css  _page.Ble5zXF_.css
velt/.svelte-kit/output/client/_app/immutable/chunks/: BC_43_Lu.js  DV0htR0b.js  DeUlJPgJ.js  DvLNuc85.js  DzGvXcqd.js  yRR4lMfm.js
velt/.svelte-kit/output/client/_app/immutable/entry/: app.B2-BEHnz.js  app.CqQNAK_L.js  start.0rgnKXJA.js
velt/.svelte-kit/output/client/_app/immutable/nodes/: 1.49SupNqo.js  2.BgZVYHxF.js  3.ChenUOBn.js  3.CjwOpQI7.js  4.Cd9_Nl_0.js  4.JOL7S73P.js
velt/.svelte-kit/output/server/: index.js  manifest-full.js
velt/.svelte-kit/output/server/.vite/: manifest.json
velt/.svelte-kit/output/server/chunks/: internal.js
velt/.svelte-kit/output/server/entries/pages/: _page.svelte.js
velt/.svelte-kit/output/server/entries/pages/login/: _page.svelte.js
velt/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js
velt/src/: app.css
velt/src/lib/components/: ChatMessage.svelte  IconBack.svelte  IconHamburger.svelte  IconSend.svelte
velt/src/routes/: +page.svelte
velt/src/routes/login/: +page.svelte
velt/src/routes/signup/: +page.svelte
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: 841a2ad1-ea83-4733-98ab-ebc2f4bcaaab
